--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -1,12 +1,19 @@
-{% extends 'base.html'%}
-    
-    {% block content %}
-    <h1 class="center align" style="color: rgb(205, 85, 93);"> Home Page </h1>
-    <hr/>
-    <p class="center align">Home</p>
-    <img
-   src="https://www.deccanchronicle.com/nation/disneyland-inspired-theme-park-to-open-soon-in-navi-mumbai-1863829"
-   alt="kidsWorld"
-/>
-        {% endblock  %}
 
+
+{% extends 'base.html' %}
+{% load static %}
+
+{% block content %}
+<style>
+  body {
+    background-image: url("{% static 'images/background.jpg' %}"); /* مسار الصورة في static */
+    background-size: cover;      /* تغطي كل الصفحة */
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+</style>
+
+<h1 class="center align" >Home Page</h1>
+<hr/>
+<p class="center align">Home</p>
+{% endblock %}
