--- a/main_app/templates/main_app/kids_detail.html
+++ b/main_app/templates/main_app/kids_detail.html
@@ -7,13 +7,17 @@
       <div class="card-content">
         <span class="card-title">{{ kids.kid_name }}</span>
         <p>Parent name: {{ kids.parent_name }}</p>
-        <p>Kid image: {{ kids.kid_image }}</p>
-        
+        <!-- <p>Kid image: {{ kids.kid_image }}</p> -->
+        {% load static %}
+                  <img src="{% static kid.kid_image|cut:'main_app/static/' %}" width="100px" height="100px" alt="kid Image">
+        </div>
+    </div>
+  </a>
 
       </div>
       <div class="card-action">
         <a href="{% url 'kid_update' kids.id %}">Edit</a>
-        <a href="{% url 'kid_delete' toys.id %}">Delete</a>
+        <a href="{% url 'kid_delete' kids.id %}">Delete</a>
       </div>
     </div>
   </div>
