--- a/main_app/templates/main_app/kids_form.html
+++ b/main_app/templates/main_app/kids_form.html
@@ -3,11 +3,11 @@
 {% block content %}
 
   {% if object %}
-    <h1>Edit <span class="teal-text">{{object.name}}</span></h1>
+    <h1>Edit <span class="teal-text">{{object.kid_name}}</span></h1>
   {% else %}
     <h1>Add a Kid</h1>
   {% endif %}
-  <form action="" method="post">
+  <form action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <table>
       {{ form.as_table }}
