--- a/main_app/templates/main_app/kids_detail.html
+++ b/main_app/templates/main_app/kids_detail.html
@@ -1,25 +1,28 @@
-{% extends 'base.html' %}
+{% extends 'base.html'%} 
 {% block content %}
-{% load static %}
-<h1>Kid Details</h1>
-<div class="row">
-  <div class="col s6 col-offset-3">
-    <div class="card">
-      <div class="card-content">
-        <span class="card-title">{{ kids.kid_name }}</span>
-        <p>Parent name: {{ kids.parent_name }}</p>
-    
-                  <img src="{% static kids.kid_image|cut:'main_app/static/' %}" width="100px" height="100px" alt="kid Image">
-        </div>
-    </div>
-  </a>
 
-      </div>
-      <div class="card-action">
-        <a href="{% url 'kid_update' kids.id %}">Edit</a>
-        <a href="{% url 'kid_delete' kids.id %}">Delete</a>
-      </div>
+<h1 class="page-title">Kid Details</h1>
+
+<div class="detail-card">
+  <div class="card-content">
+    <div class="right">
+      {% load static %}
+      <img
+        src="{% static kid.kid_image|cut:'main_app/static/' %}"
+        width="150px"
+        height="150px"
+        class="detail-img"
+      />
+    </div>
+    <span class="card-title">{{ kid.kid_name }}</span>
+    <p>Parent Phone: {{ kid.parent_phone }}</p>
+    <!-- <p>Age: {{ kid.kid_age }}</p> -->
+
+    <div class="card-section">
+      <a href="{% url 'kid_update' kid.id %}" class="btn green">Edit</a>
+      <a href="{% url 'kid_delete' kid.id %}" class="btn orange">Delete</a>
     </div>
   </div>
 </div>
+
 {% endblock %}
