--- a/main_app/templates/games/index.html
+++ b/main_app/templates/games/index.html
@@ -10,7 +10,7 @@
             <div class="flex-container">
               <div class="card-text">
                 <span class="card-title">{{ ga.game_name }}</span>
-                <p>Description: {{ ga.description }}</p>
+                <!-- <p>Description: {{ ga.description }}</p> -->
                 <p>Price: {{ ga.game_price }}</p>
               </div>
               <div class="card-image">
