--- a/main_app/templates/main_app/kids_confirm_delete.html
+++ b/main_app/templates/main_app/kids_confirm_delete.html
@@ -6,7 +6,7 @@
   <h4>Are you sure you want to delete the account for <span class="teal-text">{{ object.name }}</span>?</h4>
   <form action="" method="POST">
     {% csrf_token %}
-    <input type="submit" value="Yes - Delete!" class="btn">
+    <input type="submit" value="Yes - Delete!" class="btn delete-kid">
     <a href="{% url 'kid_detail' object.id %}">Cancel</a>
   </form>
 {% endblock %}
