--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -20,7 +20,7 @@
 
   
   <img 
-    src="{% static 'images/disneyland-paris.jpg' %}" 
+    src="{% static '/images/kidsWorld.jpeg' %}" 
     alt="Kids World" 
     style="
         width:100%; 
@@ -39,7 +39,7 @@
 
 </div>
 
-<p style="text-align:center; max-width:700px; margin:auto; margin-top:15px; z-index:1; position:relative; color:#333;">
+<p style="text-align:center; max-width:700px; margin:auto; margin-top:15px; z-index:1; position:relative; color:#5d3a99;">
   Welcome to <strong>Kids World</strong>, the ultimate indoor playground where children of all ages can explore, play, and learn in a safe and fun environment. Our colorful play areas, slides, trampolines, and ball pits provide endless entertainment for kids.
 </p>
 
