--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -10,7 +10,9 @@
 <body>
   <!-- Navbar -->
   <header class="navbar">
-    <a href="{% url 'home' %}" class="brand-logo">Kids World</a>
+    <a href="{% url 'home' %}" class="brand-logo">
+     Kids World <span class="rotating-star">⭐</span>
+    </a>
     <ul>
       <li><a href="{% url 'home' %}">Home</a></li>
       {% if user.is_authenticated %}
@@ -20,10 +22,15 @@
         <li><a href="{% url 'games_create' %}">Add a Game</a></li>
         <li><a href="{% url 'index' %}">View All Games</a></li>
         <li>
-          <form method="post" action="{% url 'logout' %}">
-            {% csrf_token %}
-            <button type="submit">Log Out</button>
-          </form>
+        <a href="{% url 'logout' %}" 
+          onclick="event.preventDefault(); document.getElementById('logout-form').submit();">
+         Log Out
+        </a>
+
+<form id="logout-form" method="post" action="{% url 'logout' %}" style="display: none;">
+    {% csrf_token %}
+</form>
+
         </li>
       {% else %}
         <li><a href="{% url 'signup' %}">Sign Up</a></li>
@@ -42,9 +49,13 @@
   <div class="balloon balloon1">🎈</div>
   <div class="balloon balloon2">🎈</div>
 
-  <!-- Footer -->
-  <footer class="footer">
-    <p class="footer-text">All Rights Reserved, &copy; 2025 Kids World 🏰 &nbsp;</p>
-  </footer>
+<!-- Footer -->
+<footer class="footer">
+  <p class="footer-text">
+    All Rights Reserved, &copy; 2025 Kids World 
+    <span class="car">🚗</span>
+  </p>
+</footer>
+
 </body>
 </html>
